test-pod.yaml
---
apiVersion: v1

kind: Pod

metadata:
   name: test-pod
   labels:
      key1: value1

spec:
   containers:
      - name: test-container
        image: hello-world
